--- a/package.json
+++ b/package.json
@@ -6,21 +6,40 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma": "npx prisma generate"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.15.0",
+    "@prisma/client": "^5.16.2",
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.3",
+    "classnames": "^2.5.1",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.12.4",
+    "mongodb": "^6.8.0",
+    "next": "^14.2.5",
+    "next-auth": "^4.24.7",
     "react": "^18",
+    "react-calendar": "^5.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-icons": "^5.2.1",
+    "react-minimal-pie-chart": "^8.4.0",
+    "react-paginate": "^8.2.0",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "postcss": "^8",
+    "prisma": "^5.16.2",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
